<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home_fragment"
            android:checked="true"
            android:checkable="true"
            android:title="@string/menu_home"/>
        <item
            android:id="@+id/nav_profile"
            android:title="@string/menu_profile"
            android:checkable="true"/>
        <item
            android:id="@+id/nav_acc"
            android:title="@string/menu_accounts"
            android:checkable="true"/>
        <item
            android:id="@+id/nav_transactions"
            android:title="@string/menu_transactions"
            android:checkable="true"/>
        <item
            android:id="@+id/nav_stats"
            android:title="@string/menu_stats"
            android:checkable="true"/>
        <item
            android:id="@+id/nav_settings"
            android:title="@string/menu_settings"
            android:checkable="true"/>
        <item
            android:id="@+id/nav_help"
            android:title="@string/menu_help"
            android:checkable="true"/>
    </group>
</menu>